--- a/templates/empresas_form.html
+++ b/templates/empresas_form.html
@@ -8,7 +8,7 @@
       <div class="card-body">
         <h3 class="mb-3">{{ 'Editar empresa' if is_edit else 'Nueva empresa' }}</h3>
 
-        <form method="POST" novalidate>
+        <form method="POST" enctype="multipart/form-data" novalidate>
           {{ form.hidden_tag() }}
 
           <div class="mb-3">
@@ -24,6 +24,10 @@
 
           <div class="d-flex gap-2 mt-3">
             {{ form.submit(class="btn btn-primary") }}
+            <div>
+              <label class="form-label small mb-1">Logo / foto (opcional)</label>
+              <input type="file" name="photo" accept="image/*" class="form-control form-control-sm">
+            </div>
             <a href="{{ url_for('empresas_index') }}" class="btn btn-outline-secondary">Cancelar</a>
           </div>
         </form>
