--- a/templates/perfil_edit.html
+++ b/templates/perfil_edit.html
@@ -8,7 +8,7 @@
       <div class="card-body">
         <h3 class="mb-3">Editar mi perfil</h3>
 
-        <form method="POST" novalidate>
+        <form method="POST" enctype="multipart/form-data" novalidate>
           {{ form.hidden_tag() }}
 
           <div class="mb-3">
@@ -43,6 +43,10 @@
 
           <div class="d-flex gap-2">
             {{ form.submit(class="btn btn-primary") }}
+            <div>
+              <label class="form-label small mb-1">Foto de perfil (opcional)</label>
+              <input type="file" name="photo" accept="image/*" class="form-control form-control-sm">
+            </div>
             <a href="{{ url_for('perfil') }}" class="btn btn-outline-secondary">Cancelar</a>
           </div>
         </form>
